# Cemu

./: CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml  build_check.yml  deploy_experimental_release.yml  deploy_stable_release.yml  freebsd_build.sh  linux_arm64_build.sh
cmake/: FindWayland.cmake
dependencies/ih264d/: CMakeLists.txt
dependencies/ih264d/common/armv8/: ih264_intra_pred_chroma_av8.s  ih264_intra_pred_luma_16x16_av8.s  ih264_intra_pred_luma_8x8_av8.s
dependencies/vcpkg_overlay_ports/tiff/: vcpkg.json
scripts/: Info.plist  appimage.sh  cemu.desktop  cemu.sh  docker.sh  mac-bundle.sh  xdg.patch
src/: CMakeLists.txt  main.cpp
src/Cafe/: CMakeLists.txt  CafeSystem.cpp
src/Cafe/Account/: Account.cpp
src/Cafe/Filesystem/: fscDeviceHostFS.cpp
src/Cafe/HW/Latte/Renderer/Vulkan/: VulkanAPI.h  VulkanRenderer.cpp  VulkanRenderer.h
src/Cafe/IOSU/PDM/: iosu_pdm.cpp
src/Cafe/IOSU/legacy/: iosu_boss.cpp  iosu_crypto.cpp
src/Cafe/OS/libs/coreinit/: coreinit_FS.cpp
src/Cafe/OS/libs/nn_acp/: nn_acp.cpp
src/Cafe/OS/libs/nn_aoc/: nn_aoc.cpp
src/Cafe/OS/libs/nn_save/: nn_save.cpp
src/Cafe/TitleList/: GameInfo.h  SaveInfo.cpp
src/Cemu/Tools/DownloadManager/: DownloadManager.cpp
src/config/: ActiveSettings.cpp  ActiveSettings.h
src/gui/: CemuApp.cpp  CemuUpdateWindow.cpp  GameUpdateWindow.cpp  GeneralSettings2.cpp  GettingStartedDialog.cpp  MainWindow.cpp  TitleManager.cpp  guiWrapper.cpp  guiWrapper.h
src/gui/dialogs/SaveImport/: SaveImportWindow.cpp  SaveTransfer.cpp
src/input/api/Wiimote/: WiimoteControllerProvider.cpp  (+2 more)
